@@ -1,3 +1,7 @@
+2011-04-20  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/template/const4.C: New.
+
 2011-04-19  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/ext/complex7.C: New.
